semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__typ__lower_repeated_field_names.snap
---
source: semantics/oracle/tests/typ.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "repeated field name `foo`",
        labels: [
            Label {
                style: Primary,
                message: "repeated field name",
                span: Span {
                    start: 36,
                    end: 39,
                },
            },
        ],
        note: None,
    },
]
