semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__typ__lower_union_nested_file_reference.snap
---
source: semantics/oracle/tests/typ.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid type of union field",
        labels: [
            Label {
                style: Primary,
                message: "union must not contain a `file`",
                span: Span {
                    start: 64,
                    end: 71,
                },
            },
            Label {
                style: Secondary,
                message: "`file` introduced here",
                span: Span {
                    start: 29,
                    end: 33,
                },
            },
        ],
        note: None,
    },
]
